[build-system]
requires = [
"appnope==0.1.2",
"backcall==0.2.0",
"cffi==1.14.5",
"decorator==5.0.9",
"ipykernel==5.5.5",
"ipython==7.24.1",
"ipython-genutils==0.2.0",
"jedi==0.18.0",
"jupyter-client==6.1.12",
"jupyter-core==4.7.1",
"matplotlib-inline==0.1.2",
"parso==0.8.2",
"pexpect==4.8.0",
"pickleshare==0.7.5",
"prompt-toolkit==3.0.18",
"ptyprocess==0.7.0",
"pycparser==2.20",
"pygame==2.0.1",
"Pygments==2.9.0",
"pymunk==6.0.0",
"python-dateutil==2.8.1",
"pyzmq==22.1.0",
"setuptools>=42",
"six==1.16.0",
"tornado==6.1",
"traitlets==5.0.5",
"wcwidth==0.2.5"
]
build-backend = "setuptools.build_meta"