[metadata]
name = games
version = 0.0.1
author = krishols, acbart
author_email = kris@udel.edu
description = evidence-based and student friendly game library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/krishols/games
classifiers =
    Programming Language :: Python
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src